# libblocxx-deb

./: .gitignore  libblocxx_2.1.0.orig.tar.xz  libblocxx_2.3.0~svn544.orig.tar.xz
blocxx-2.1.0/: AUTHORS  COPYING  ChangeLog  Doxyfile.in  INSTALL  LICENSE  Makefile-replacement.inc  Makefile-shared-lib-inst.inc  Makefile-shared-lib.inc  Makefile.am  README  acconfig.h  acinclude.m4  blocxx.m4  configure.in
blocxx-2.1.0/debian/: libblocxx-dev.install  rules
blocxx-2.1.0/debian/patches/: catch_gcc45_bug_is_pod.patch  fix_dereferencing_type_punned_pointer_warning.patch  fix_suggest_parentheses_warnings.patch  memorybarrier.patch  openssl.patch  pkgconfig.patch  std_numeric_limits.patch  std_ptrdiff.patch
blocxx-2.1.0/examples/cmdLineParser/: Makefile.am  cmdLineParser.cpp
blocxx-2.1.0/examples/collections/: Makefile.am  arrayDemo.cpp  listDemo.cpp  mapDemo.cpp
blocxx-2.1.0/examples/iconv/: Makefile.am  iconv_test1.cpp
blocxx-2.1.0/examples/intrusiveRef/: COWIntrusiveRefExample.cpp  Makefile.am
blocxx-2.1.0/examples/loggers/: Makefile.am  MutexedLogger.cpp  MutexedLogger.hpp  loggers.cpp
blocxx-2.1.0/examples/pcre/: capture.cpp  grep.cpp  split.cpp
blocxx-2.1.0/examples/regex/: Makefile.am  execute.cpp  replace.cpp
blocxx-2.1.0/examples/sharedLibs/: Makefile.am  SharedLibMakefile  derivedDummyLib.cpp  derivedDummyLib.hpp  dummyLib.cpp  dummyLib.hpp  sharedLibs.cpp
blocxx-2.1.0/examples/threads/: Makefile.am  barrierRunnable.cpp  barrierRunnable.hpp  conditionRunnable.cpp  conditionRunnable.hpp  demoRunnable.cpp  demoRunnable.hpp  demoThread.cpp  demoThread.hpp  threads.cpp
blocxx-2.1.0/examples/utils/: Makefile.am  utils.cpp
blocxx-2.1.0/src/: Makefile.am
blocxx-2.1.0/src/blocxx/: AppenderLogger.cpp  AppenderLogger.hpp  Array.cpp  Array.hpp  ArrayFwd.hpp  ArrayImpl.hpp  Assertion.cpp  Assertion.hpp  AtomicOps.cpp  AtomicOps.hpp  AutoDescriptor.cpp  AutoDescriptor.hpp  AutoPtr.hpp  AutoResource.hpp  BaseStreamBuffer.cpp  BaseStreamBuffer.hpp  BinarySerialization.cpp  BinarySerialization.hpp  Bool.cpp  Bool.hpp  ByteSwap.hpp  COWIntrusiveCountableBase.cpp  COWIntrusiveCountableBase.hpp  COWIntrusiveReference.hpp  COWReference.hpp  COWReferenceBase.hpp  CerrAppender.cpp  CerrAppender.hpp  CerrLogger.cpp  CerrLogger.hpp  Char16.cpp  Char16.hpp  CmdLineParser.cpp  CmdLineParser.hpp  CommonFwd.hpp  Condition.cpp  Condition.hpp  Cstr.hpp  DLLSharedLibrary.cpp  DLLSharedLibrary.hpp  (+269 more)
blocxx-2.1.0/test/: Makefile.am
blocxx-2.1.0/test/CppUnit/: Makefile.am  Test.hpp  TestCase.cpp  TestCase.hpp  TextTestResult.cpp
blocxx-2.1.0/test/unit/: AtomicOpsTestCases.cpp  AtomicOpsTestCases.hpp  COWIntrusiveReferenceTestCases.cpp  COWIntrusiveReferenceTestCases.hpp  CmdLineParserTestCases.cpp  CmdLineParserTestCases.hpp  ConditionTestCases.cpp  ConditionTestCases.hpp  CryptographicRandomNumberTestCases.cpp  CryptographicRandomNumberTestCases.hpp  DateTimeTestCases.cpp  DateTimeTestCases.hpp  DelayedFormatTestCases.cpp  DelayedFormatTestCases.hpp  EnumerationTestCases.cpp  EnumerationTestCases.hpp  ExceptionTestCases.cpp  ExceptionTestCases.hpp  ExecTestCases.cpp  ExecTestCases.hpp  FileSystemTestCases.cpp  FileSystemTestCases.hpp  FormatTestCases.cpp  FormatTestCases.hpp  GlobalPtrTestCases.cpp  GlobalPtrTestCases.hpp  IPCMutexTestCases.cpp  IPCMutexTestCases.hpp  IStringStreamTestCases.cpp  IStringStreamTestCases.hpp  InetAddressTestCases.cpp  InetAddressTestCases.hpp  IstreamBufIteratorTestCases.cpp  IstreamBufIteratorTestCases.hpp  LazyGlobalTestCases.cpp  LazyGlobalTestCases.hpp  LazyGlobalTestLibrary.cpp  LogAppenderTestCases.cpp  LogAppenderTestCases.hpp  LoggerTestCases.cpp  (+51 more)
blocxx-2.3.0/: AUTHORS  COPYING  ChangeLog  Doxyfile.in  INSTALL  LICENSE  Makefile-executable.inc  Makefile-shared-lib.inc  Makefile.am  README  TODO  acinclude.m4  blocxx.pc.in  blocxx_ar.sh  configure.in  fake_library_creator.sh
blocxx-2.3.0/debian/: changelog  control  copyright  docs  libblocxx6.symbols  libblocxx8.install  libblocxx8.symbols  rules  watch
blocxx-2.3.0/debian/patches/: add_missing_CryptographicRandomNumberTestCases_hpp.patch  add_missing_files.patch  fix_gcc44.patch  series
blocxx-2.3.0/doc/: BloCxx_Binary_Compatibility.html  Makefile.am  PORTING.txt  blocxx_coding_guide.txt  logging.txt
blocxx-2.3.0/examples/: Makefile.am
blocxx-2.3.0/examples/cmdLineParser/: Makefile.am  cmdLineParser.cpp  dynamicCmdLineParser.cpp
blocxx-2.3.0/examples/collections/: Makefile.am  arrayDemo.cpp  listDemo.cpp  mapDemo.cpp
blocxx-2.3.0/examples/iconv/: Makefile.am  iconv_test1.cpp
blocxx-2.3.0/examples/intrusiveRef/: COWIntrusiveRefExample.cpp  Makefile.am
blocxx-2.3.0/examples/loggers/: Makefile.am  MutexedLogger.cpp  MutexedLogger.hpp  loggers.cpp
blocxx-2.3.0/examples/pcre/: Makefile.am  execute.cpp  match.cpp  replace.cpp
blocxx-2.3.0/examples/regex/: capture.cpp  grep.cpp  match.cpp  split.cpp
blocxx-2.3.0/examples/sharedLibs/: Makefile.am  SharedLibMakefile  derivedDummyLib.cpp  derivedDummyLib.hpp  dummyLib.cpp  dummyLib.hpp  readme  sharedLibs.cpp
blocxx-2.3.0/examples/threads/: Makefile.am  barrierRunnable.cpp  barrierRunnable.hpp  conditionRunnable.cpp  conditionRunnable.hpp  demoRunnable.cpp  demoRunnable.hpp  demoThread.cpp  demoThread.hpp  threads.cpp
blocxx-2.3.0/examples/utils/: Makefile.am  utils.cpp
blocxx-2.3.0/src/: Makefile.am
blocxx-2.3.0/src/blocxx/: AppenderLogger.cpp  AppenderLogger.hpp  Array.cpp  Array.hpp  ArrayFwd.hpp  ArrayImpl.hpp  Assertion.cpp  Assertion.hpp  AtomicOps.cpp  AtomicOps.hpp  AutoDescriptor.cpp  AutoDescriptor.hpp  AutoPtr.hpp  AutoResource.hpp  BaseStreamBuffer.cpp  BaseStreamBuffer.hpp  BinarySerialization.cpp  BinarySerialization.hpp  Bool.cpp  Bool.hpp  ByteSwap.hpp  COWIntrusiveCountableBase.cpp  COWIntrusiveCountableBase.hpp  COWIntrusiveReference.hpp  COWReference.hpp  COWReferenceBase.hpp  CerrAppender.cpp  CerrAppender.hpp  CerrLogger.cpp  CerrLogger.hpp  Char16.cpp  Char16.hpp  Clock.hpp  ClockImpl.cpp  ClockImpl.hpp  CmdLineParser.cpp  CmdLineParser.hpp  CommonFwd.hpp  (+296 more)
blocxx-2.3.0/test/: Makefile.am
(+88 files in other folders)
